syntax = "proto3";

package toServerSubscribe;

import "reCtx/reCtx.proto";

option go_package = "netsvr/internal/protocol/toServer/reqTopicsSessionId;reqTopicsSessionId";

//获取网关中的某几个主题的session id
message ReqTopicsSessionId {
  //请求上下文，网关会原样回传给工作进程
  reCtx.ReCtx reCtx = 1;
  //主题集合
  repeated string topics = 2;
}